test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_types/non_constant_static_local_initializer.plx
pub fn main(none) i32 {
    a: i32 = 1
    #  b has static storage duration,
    #      * so its initializer must be constant.
    #      
    data b: i32 = a * 2
    return b
}
